--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,14 @@
 name: multiscreen
-description: Support multiscreen for mobile app.
-version: 1.0.2
+description: Support multiscreen(different resolution and size of display) for mobile application.
+
+
+version: 1.0.3
 author: Daewook. Kwon<tossy@tossy.me>
 homepage: https://github.com/team-tossy/multiscreen
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
+  flutter: ^1.8.0
 
 dependencies:
   flutter:
