--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,6 @@
 name: multiscreen
 description: Support multiscreen(different resolution and size of display) for mobile application.
 version: 1.3.0
-author: Daewook. Kwon<tossy@tossy.me>
 homepage: https://github.com/team-tossy/multiscreen
 
 environment:
@@ -16,5 +15,6 @@ dev_dependencies:
     sdk: flutter
 flutter:
   plugin:
-    androidPackage: me.tossy.flutter.multiscreen
-    pluginClass: MultiscreenPlugin
+    platforms:
+      androidPackage: me.tossy.flutter.multiscreen
+      pluginClass: MultiscreenPlugin
